Fix bug where text wraps in tablets when there is whitespace.

--- a/src/stylesheets/_desktop.scss
+++ b/src/stylesheets/_desktop.scss
@@ -57,6 +57,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
           display: flex;
           align-items: center;
           justify-content: center;
+          white-space: nowrap;
           font-size: 1.1rem;
           font-weight: 700;
           padding: 9.5px;
@@ -212,6 +213,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
       display: flex;
       align-items: center;
       justify-content: center;
+      white-space: nowrap;
       font-size: 1.1rem;
       font-weight: 700;
       color: $desaturated-dark-cyan;
